# darknet-release

./: CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
cmake/: darknet-extras.cmake.in
debian/: changelog  control  gbp.conf  preinst  prerm  rules
patches/: CMakeLists.txt  package.xml
patches/cmake/: CMakeLists.txt
patches/debian/: preinst
rpm/: ros-indigo-darknet.spec  template.spec
