<?xml version="1.0"?>
<package>
  <name>darknet</name>
  <!-- 2710d632571a0083f6b8aa57a3c822b57a9f4866 : Nov 27, 2016 -->
  <version>:{version}</version>
  <description>Darknet is an open source neural network framework written in C and CUDA. It is fast, easy to install, and supports CPU and GPU computation</description>
  <author>Joseph Redmon</author>
  <maintainer email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</maintainer>
  <license>YOLO</license>
  <url type="website">http://pjreddie.com/darknet/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nvidia-cuda</build_depend>
  <build_depend>nvidia-cuda-dev</build_depend>
  <build_depend>libopencv-dev</build_depend>

  <run_depend>libopencv-dev</run_depend>

  <test_depend>rostest</test_depend>
  <test_depend>rospy</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
